nodes/mc/gomc/src/mc/router/parser.output

state 0
	$accept: .route $end 

	IDENT  shift 3
	.  error

	route  goto 1
	node  goto 2

state 1
	$accept:  route.$end 

	$end  accept
	.  error


state 2
	route:  node.'>' node 
	route:  node.'<' node 
	route:  node.'<' '>' node 
	route:  node.'>' transforms 

	'<'  shift 5
	'>'  shift 4
	.  error


state 3
	node:  IDENT.    (5)
	node:  IDENT.'/' IDENT 

	'/'  shift 6
	.  reduce 5 (src line 86)


state 4
	route:  node '>'.node 
	route:  node '>'.transforms 

	IDENT  shift 3
	'?'  shift 10
	'%'  shift 11
	'='  shift 12
	.  error

	node  goto 7
	transforms  goto 8
	transform  goto 9

state 5
	route:  node '<'.node 
	route:  node '<'.'>' node 

	IDENT  shift 3
	'>'  shift 14
	.  error

	node  goto 13

state 6
	node:  IDENT '/'.IDENT 

	IDENT  shift 15
	.  error


state 7
	route:  node '>' node.    (1)

	.  reduce 1 (src line 48)


state 8
	route:  node '>' transforms.    (4)

	.  reduce 4 (src line 73)


state 9
	transforms:  transform.'>' node 
	transforms:  transform.'>' transforms 

	'>'  shift 16
	.  error


state 10
	transform:  '?'.'{' expr '}' 
	transform:  '?'.'{' expr '}' '%' '{' script '}' 
	transform:  '?'.'{' expr '}' '=' '{' mapexprs '}' 

	'{'  shift 17
	.  error


state 11
	transform:  '%'.'{' script '}' 

	'{'  shift 18
	.  error


state 12
	transform:  '='.'{' mapexprs '}' 

	'{'  shift 19
	.  error


state 13
	route:  node '<' node.    (2)

	.  reduce 2 (src line 56)


state 14
	route:  node '<' '>'.node 

	IDENT  shift 3
	.  error

	node  goto 20

state 15
	node:  IDENT '/' IDENT.    (6)

	.  reduce 6 (src line 90)


state 16
	transforms:  transform '>'.node 
	transforms:  transform '>'.transforms 

	IDENT  shift 3
	'?'  shift 10
	'%'  shift 11
	'='  shift 12
	.  error

	node  goto 21
	transforms  goto 22
	transform  goto 9

state 17
	transform:  '?' '{'.expr '}' 
	transform:  '?' '{'.expr '}' '%' '{' script '}' 
	transform:  '?' '{'.expr '}' '=' '{' mapexprs '}' 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 23

state 18
	transform:  '%' '{'.script '}' 

	IDENT  shift 36
	THIS  shift 37
	.  error

	script  goto 33
	dstexpr  goto 35
	stmt  goto 34

state 19
	transform:  '=' '{'.mapexprs '}' 

	IDENT  shift 39
	.  error

	mapexprs  goto 38

state 20
	route:  node '<' '>' node.    (3)

	.  reduce 3 (src line 64)


state 21
	transforms:  transform '>' node.    (7)

	.  reduce 7 (src line 95)


state 22
	transforms:  transform '>' transforms.    (8)

	.  reduce 8 (src line 101)


state 23
	transform:  '?' '{' expr.'}' 
	transform:  '?' '{' expr.'}' '%' '{' script '}' 
	transform:  '?' '{' expr.'}' '=' '{' mapexprs '}' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	AND  shift 53
	OR  shift 54
	EQ  shift 49
	NE  shift 50
	LE  shift 52
	GE  shift 51
	'%'  shift 48
	'}'  shift 40
	'['  shift 58
	'<'  shift 56
	'>'  shift 55
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'&'  shift 45
	'|'  shift 46
	'^'  shift 47
	'.'  shift 57
	.  error


state 24
	expr:  NUMBER.    (22)

	.  reduce 22 (src line 186)


state 25
	expr:  '{'.mapexprs '}' 

	IDENT  shift 39
	.  error

	mapexprs  goto 59

state 26
	expr:  '['.listexprs ']' 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 61
	listexprs  goto 60

state 27
	expr:  IDENT.'(' listexprs ')' 
	varexpr:  IDENT.    (53)

	'('  shift 62
	.  reduce 53 (src line 376)


state 28
	expr:  STRING.    (26)

	.  reduce 26 (src line 209)


state 29
	expr:  '-'.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 63

state 30
	expr:  '('.expr ')' 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 64

state 31
	expr:  varexpr.    (29)

	.  reduce 29 (src line 225)


state 32
	expr:  '!'.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 65

state 33
	transform:  '%' '{' script.'}' 

	'}'  shift 66
	.  error


state 34
	script:  stmt.    (14)
	script:  stmt.script 

	IDENT  shift 36
	THIS  shift 37
	.  reduce 14 (src line 141)

	script  goto 67
	dstexpr  goto 35
	stmt  goto 34

state 35
	stmt:  dstexpr.'=' expr ';' 
	stmt:  dstexpr.PE expr ';' 
	stmt:  dstexpr.ME expr ';' 
	stmt:  dstexpr.TE expr ';' 
	stmt:  dstexpr.DE expr ';' 
	stmt:  dstexpr.RE expr ';' 
	dstexpr:  dstexpr.'[' expr ']' 
	dstexpr:  dstexpr.'.' IDENT 

	PE  shift 69
	ME  shift 70
	TE  shift 71
	DE  shift 72
	RE  shift 73
	'='  shift 68
	'['  shift 74
	'.'  shift 75
	.  error


state 36
	dstexpr:  IDENT.    (54)

	.  reduce 54 (src line 381)


state 37
	dstexpr:  THIS.    (55)

	.  reduce 55 (src line 387)


state 38
	transform:  '=' '{' mapexprs.'}' 

	'}'  shift 76
	.  error


state 39
	mapexprs:  IDENT.':' expr 
	mapexprs:  IDENT.':' expr ',' mapexprs 

	':'  shift 77
	.  error


state 40
	transform:  '?' '{' expr '}'.    (9)
	transform:  '?' '{' expr '}'.'%' '{' script '}' 
	transform:  '?' '{' expr '}'.'=' '{' mapexprs '}' 

	'%'  shift 78
	'='  shift 79
	.  reduce 9 (src line 108)


state 41
	expr:  expr '+'.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 80

state 42
	expr:  expr '-'.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 81

state 43
	expr:  expr '*'.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 82

state 44
	expr:  expr '/'.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 83

state 45
	expr:  expr '&'.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 84

state 46
	expr:  expr '|'.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 85

state 47
	expr:  expr '^'.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 86

state 48
	expr:  expr '%'.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 87

state 49
	expr:  expr EQ.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 88

state 50
	expr:  expr NE.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 89

state 51
	expr:  expr GE.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 90

state 52
	expr:  expr LE.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 91

state 53
	expr:  expr AND.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 92

state 54
	expr:  expr OR.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 93

state 55
	expr:  expr '>'.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 94

state 56
	expr:  expr '<'.expr 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 95

state 57
	varexpr:  expr '.'.IDENT 

	IDENT  shift 96
	.  error


state 58
	varexpr:  expr '['.expr ']' 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 97

state 59
	expr:  '{' mapexprs.'}' 

	'}'  shift 98
	.  error


state 60
	expr:  '[' listexprs.']' 

	']'  shift 99
	.  error


state 61
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	listexprs:  expr.    (49)
	listexprs:  expr.',' listexprs 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	AND  shift 53
	OR  shift 54
	EQ  shift 49
	NE  shift 50
	LE  shift 52
	GE  shift 51
	'%'  shift 48
	'['  shift 58
	'<'  shift 56
	'>'  shift 55
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'&'  shift 45
	'|'  shift 46
	'^'  shift 47
	'.'  shift 57
	','  shift 100
	.  reduce 49 (src line 350)


state 62
	expr:  IDENT '('.listexprs ')' 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 61
	listexprs  goto 101

state 63
	expr:  '-' expr.    (27)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'['  shift 58
	'.'  shift 57
	.  reduce 27 (src line 215)


state 64
	expr:  '(' expr.')' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	AND  shift 53
	OR  shift 54
	EQ  shift 49
	NE  shift 50
	LE  shift 52
	GE  shift 51
	'%'  shift 48
	'['  shift 58
	'<'  shift 56
	'>'  shift 55
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'&'  shift 45
	'|'  shift 46
	'^'  shift 47
	'.'  shift 57
	')'  shift 102
	.  error


state 65
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  '!' expr.    (44)
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'['  shift 58
	'.'  shift 57
	.  reduce 44 (src line 313)


state 66
	transform:  '%' '{' script '}'.    (10)

	.  reduce 10 (src line 114)


state 67
	script:  stmt script.    (15)

	.  reduce 15 (src line 146)


state 68
	stmt:  dstexpr '='.expr ';' 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 103

state 69
	stmt:  dstexpr PE.expr ';' 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 104

state 70
	stmt:  dstexpr ME.expr ';' 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 105

state 71
	stmt:  dstexpr TE.expr ';' 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 106

state 72
	stmt:  dstexpr DE.expr ';' 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 107

state 73
	stmt:  dstexpr RE.expr ';' 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 108

state 74
	dstexpr:  dstexpr '['.expr ']' 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 109

state 75
	dstexpr:  dstexpr '.'.IDENT 

	IDENT  shift 110
	.  error


state 76
	transform:  '=' '{' mapexprs '}'.    (11)

	.  reduce 11 (src line 120)


state 77
	mapexprs:  IDENT ':'.expr 
	mapexprs:  IDENT ':'.expr ',' mapexprs 

	IDENT  shift 27
	NUMBER  shift 24
	STRING  shift 28
	'{'  shift 25
	'['  shift 26
	'-'  shift 29
	'!'  shift 32
	'('  shift 30
	.  error

	varexpr  goto 31
	expr  goto 111

state 78
	transform:  '?' '{' expr '}' '%'.'{' script '}' 

	'{'  shift 112
	.  error


state 79
	transform:  '?' '{' expr '}' '='.'{' mapexprs '}' 

	'{'  shift 113
	.  error


state 80
	expr:  expr.'+' expr 
	expr:  expr '+' expr.    (30)
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'%'  shift 48
	'['  shift 58
	'*'  shift 43
	'/'  shift 44
	'.'  shift 57
	.  reduce 30 (src line 229)


state 81
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr '-' expr.    (31)
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'%'  shift 48
	'['  shift 58
	'*'  shift 43
	'/'  shift 44
	'.'  shift 57
	.  reduce 31 (src line 235)


state 82
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr '*' expr.    (32)
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'['  shift 58
	'.'  shift 57
	.  reduce 32 (src line 241)


state 83
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr '/' expr.    (33)
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'['  shift 58
	'.'  shift 57
	.  reduce 33 (src line 247)


state 84
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr '&' expr.    (34)
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'%'  shift 48
	'['  shift 58
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'.'  shift 57
	.  reduce 34 (src line 253)


state 85
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr '|' expr.    (35)
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'%'  shift 48
	'['  shift 58
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'.'  shift 57
	.  reduce 35 (src line 259)


state 86
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr '^' expr.    (36)
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'%'  shift 48
	'['  shift 58
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'.'  shift 57
	.  reduce 36 (src line 265)


state 87
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr '%' expr.    (37)
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'['  shift 58
	'.'  shift 57
	.  reduce 37 (src line 271)


state 88
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr EQ expr.    (38)
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'%'  shift 48
	'['  shift 58
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'&'  shift 45
	'|'  shift 46
	'^'  shift 47
	'.'  shift 57
	.  reduce 38 (src line 277)


state 89
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr NE expr.    (39)
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'%'  shift 48
	'['  shift 58
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'&'  shift 45
	'|'  shift 46
	'^'  shift 47
	'.'  shift 57
	.  reduce 39 (src line 283)


state 90
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr GE expr.    (40)
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'%'  shift 48
	'['  shift 58
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'&'  shift 45
	'|'  shift 46
	'^'  shift 47
	'.'  shift 57
	.  reduce 40 (src line 289)


state 91
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr LE expr.    (41)
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'%'  shift 48
	'['  shift 58
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'&'  shift 45
	'|'  shift 46
	'^'  shift 47
	'.'  shift 57
	.  reduce 41 (src line 295)


state 92
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr AND expr.    (42)
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	EQ  shift 49
	NE  shift 50
	LE  shift 52
	GE  shift 51
	'%'  shift 48
	'['  shift 58
	'<'  shift 56
	'>'  shift 55
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'&'  shift 45
	'|'  shift 46
	'^'  shift 47
	'.'  shift 57
	.  reduce 42 (src line 301)


state 93
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr OR expr.    (43)
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	EQ  shift 49
	NE  shift 50
	LE  shift 52
	GE  shift 51
	'%'  shift 48
	'['  shift 58
	'<'  shift 56
	'>'  shift 55
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'&'  shift 45
	'|'  shift 46
	'^'  shift 47
	'.'  shift 57
	.  reduce 43 (src line 307)


state 94
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr '>' expr.    (45)
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'%'  shift 48
	'['  shift 58
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'&'  shift 45
	'|'  shift 46
	'^'  shift 47
	'.'  shift 57
	.  reduce 45 (src line 319)

